[package]
name = "token-ledger-builder-v2"
version = "0.1.0"
edition = "2024"
description = "The JAM Token-Ledger service, providing transfers of tokens between holder accounts."
license = "Apache-2.0"
default-run = "token-ledger-builder-v2"

[[bin]]
name = "sign_ops"
path = "src/bin/sign_ops.rs"

[dependencies]
token-ledger-common = { version = "0.1.0", path = "../../token-ledger-common" }
token-ledger-state-v2 = { version = "0.1.0", path = "../token-ledger-state-v2" }
token-ledger-service-v2 = { version = "0.1.0", path = "../token-ledger-service-v2" }
jam-pvm-common = { version = "0.1.26", default-features = false, features = ["service", "logging"] }
jam-std-common = "0.1.26"
jam-types = { version = "0.1.26", default-features = false }
jam-tooling = "0.1.26"
polkavm-derive = "0.31.0"
codec = { version = "0.1.1", default-features = false, features = ["std"], package = "jam-codec" }
hex = { version = "0.4.3", default-features = false }
blake2b_simd = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6.0", features = ["cargo"] }
serde = "1.0.228"
serde_json = "1.0.149"
ed25519-consensus = { version = "2.1", default-features = false }
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.24", features = ["ws-client"] }
jam-null-authorizer-bin = "0.1.26"
bytes = "1"



[dev-dependencies]
tempfile = { version = "3.12.0", default-features = false }
